updated app meta-title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>v2</title>
+    <title>Open Movie Search</title>
   </head>
   <body>
     <div id="app"></div>
